Bug 495468 - Date pickers and on screen keyboards does not popup when creating a new event.
Summary: Date pickers and on screen keyboards does not popup when creating a new event.
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Android Unspecified
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-28 08:56 UTC by idoitprone
Modified: 2024-10-29 07:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
current database of junk. Not sure if it's needed (3.44 MB, application/zip)
2024-10-28 08:56 UTC, idoitprone
Details

Note You need to log in before you can comment on or make changes to this bug.
Description idoitprone 2024-10-28 08:56:45 UTC
Created attachment 175299 [details]
current database of junk. Not sure if it's needed

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
I am unable to type values into the new event text fields. I cannot change the time either. Can you help

STEPS TO REPRODUCE
1 Open. Itinerary Tab
2. Click the giant +
3. Create Trip
4. Add Event
5. Attempt to change the date, time, or add text information

OBSERVED RESULT
The keyboard does not datetime picker does not pop up. The animations are laggy too. 


EXPECTED RESULT
I can add new events


SOFTWARE/OS VERSIONS


Android:15          -    Build number AP3A.241005.015
(available in the Info Center app, or by running `kinfo` in a terminal window)
Release version: 24.11.70 - 1730047984

ADDITIONAL INFORMATION
The whole experience adding a new trip is kinda bad and regressed.
Comment 1 Bug Janitor Service 2024-10-28 16:04:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/kirigami-addons/-/merge_requests/291
Comment 2 Volker Krause 2024-10-28 16:13:17 UTC
Git commit 929c17c86dc045e8d599468ca9b7b71bb19ac2cf by Volker Krause.
Committed on 28/10/2024 at 16:03.
Pushed by carlschwan into branch 'master'.

Fix exporting the Android integration singleton to QML

This fixes accessing date/time controls on Android, which broke in 1.5.0.

M  +1    -0    src/dateandtime/CMakeLists.txt
M  +12   -2    src/dateandtime/types.h
M  +1    -0    src/formcard/CMakeLists.txt

https://invent.kde.org/libraries/kirigami-addons/-/commit/929c17c86dc045e8d599468ca9b7b71bb19ac2cf
Comment 3 Volker Krause 2024-10-28 17:03:32 UTC
Git commit 6e9802ecb7e109a79ede0b0b6a011fdbb78f3b36 by Volker Krause.
Committed on 28/10/2024 at 16:21.
Pushed by vkrause into branch 'master'.

Backport fix for native Android date/time pickers in Kirigami Addons

See https://invent.kde.org/libraries/kirigami-addons/-/merge_requests/291.

A  +65   -0    kde/unreleased/kirigami-addons/fix-android-native-date-time-picker.diff
M  +3    -2    kde/unreleased/kirigami-addons/kirigami-addons.py

https://invent.kde.org/packaging/craft-blueprints-kde/-/commit/6e9802ecb7e109a79ede0b0b6a011fdbb78f3b36
Comment 4 idoitprone 2024-10-29 07:46:13 UTC
The time date picker works again. 

The open add event transitions stills feels awkward.