Fix exporting the Android integration singleton to QML

This fixes accessing date/time controls on Android, which broke in 1.5.0.

BUG: 495468